@@ -1,6 +1,5 @@
 package insane96mcp.enhancedai.modules.skeleton.feature;
 
-import insane96mcp.enhancedai.config.IntMinMax;
 import insane96mcp.enhancedai.modules.base.ai.EAAvoidEntityGoal;
 import insane96mcp.enhancedai.modules.skeleton.ai.EARangedBowAttackGoal;
 import insane96mcp.enhancedai.setup.Config;
@@ -8,8 +7,8 @@ import insane96mcp.enhancedai.setup.Strings;
 import insane96mcp.insanelib.base.Feature;
 import insane96mcp.insanelib.base.Label;
 import insane96mcp.insanelib.base.Module;
-import insane96mcp.insanelib.config.BlacklistConfig;
-import insane96mcp.insanelib.util.IdTagMatcher;
+import insane96mcp.insanelib.config.Blacklist;
+import insane96mcp.insanelib.config.MinMax;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.Difficulty;
 import net.minecraft.world.entity.ai.goal.Goal;
@@ -17,32 +16,29 @@ import net.minecraft.world.entity.ai.goal.WrappedGoal;
 import net.minecraft.world.entity.monster.AbstractSkeleton;
 import net.minecraftforge.common.ForgeConfigSpec;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Label(name = "Skeleton Shoot", description = "Skeletons are more precise when shooting and strafing is removed, can hit a target from up to 64 blocks and try to stay away from the target.")
 public class SkeletonShoot extends Feature {
 
-	private final IntMinMax.Config shootingRangeConfig;
+	private final MinMax.Config shootingRangeConfig;
 	private final ForgeConfigSpec.ConfigValue<Double> strafeChanceConfig;
 	private final ForgeConfigSpec.ConfigValue<Double> arrowInaccuracyConfig;
 	private final ForgeConfigSpec.ConfigValue<Double> spammerChanceConfig;
-	private final BlacklistConfig entityBlacklistConfig;
+	private final Blacklist.Config entityBlacklistConfig;
 
-	private final List<String> defaultBlacklist = Arrays.asList("quark:forgotten");
+	private final List<String> defaultBlacklist = List.of("quark:forgotten");
 
-	public IntMinMax shootingRange = new IntMinMax(24, 32);
+	public MinMax shootingRange = new MinMax(24, 32);
 	public double strafeChance = 0.333d;
 	public double arrowInaccuracy = 2;
 	public double spammerChance = 0.07d;
-	public ArrayList<IdTagMatcher> entityBlacklist;
-	public boolean entityBlacklistAsWhitelist;
+	public Blacklist entityBlacklist;
 
 	public SkeletonShoot(Module module) {
 		super(Config.builder, module);
 		super.pushConfig(Config.builder);
-		this.shootingRangeConfig = new IntMinMax.Config(Config.builder, "Shooting Range", "The range from where a skeleton will shoot a player")
+		this.shootingRangeConfig = new MinMax.Config(Config.builder, "Shooting Range", "The range from where a skeleton will shoot a player")
 				.setMinMax(1, 64, this.shootingRange)
 				.build();
 		strafeChanceConfig = Config.builder
@@ -54,7 +50,10 @@ public class SkeletonShoot extends Feature {
 		spammerChanceConfig = Config.builder
 				.comment("Chance for a Skeleton to spawn as a spammer, which spams arrows instead of fully charging the bow")
 				.defineInRange("Spammer chance", this.spammerChance, 0d, 1d);
-		entityBlacklistConfig = new BlacklistConfig(Config.builder, "Entity Blacklist", "Entities that shouldn't get the enhanced Shoot AI", defaultBlacklist, false);
+		entityBlacklistConfig = new Blacklist.Config(Config.builder, "Entity Blacklist", "Entities that shouldn't get the enhanced Shoot AI")
+				.setDefaultList(defaultBlacklist)
+				.setIsDefaultWhitelist(false)
+				.build();
 		Config.builder.pop();
 	}
 
@@ -65,27 +64,14 @@ public class SkeletonShoot extends Feature {
 		this.strafeChance = this.strafeChanceConfig.get();
 		this.arrowInaccuracy = this.arrowInaccuracyConfig.get();
 		this.spammerChance = this.spammerChanceConfig.get();
-		this.entityBlacklist = (ArrayList<IdTagMatcher>) IdTagMatcher.parseStringList(this.entityBlacklistConfig.listConfig.get());
-		this.entityBlacklistAsWhitelist = this.entityBlacklistConfig.listAsWhitelistConfig.get();
+		this.entityBlacklist = this.entityBlacklistConfig.get();
 	}
 
 	public void onReassessWeaponGoal(AbstractSkeleton skeleton) {
 		if (!this.isEnabled())
 			return;
 
-		//Check for black/whitelist
-		boolean isInWhitelist = false;
-		boolean isInBlacklist = false;
-		for (IdTagMatcher blacklistEntry : this.entityBlacklist) {
-			if (blacklistEntry.matchesEntity(skeleton)) {
-				if (!this.entityBlacklistAsWhitelist)
-					isInBlacklist = true;
-				else
-					isInWhitelist = true;
-				break;
-			}
-		}
-		if (isInBlacklist || (!isInWhitelist && this.entityBlacklistAsWhitelist))
+		if (this.entityBlacklist.isBlackWhiteListed(skeleton.getType()))
 			return;
 
 		boolean strafe = skeleton.level.random.nextDouble() < this.strafeChance;
@@ -122,7 +108,7 @@ public class SkeletonShoot extends Feature {
 			if (!skeleton.level.getDifficulty().equals(Difficulty.HARD))
 				attackCooldown *= 2;
 
-			EARangedBowAttackGoal<AbstractSkeleton> EARangedBowAttackGoal = new EARangedBowAttackGoal<>(skeleton, 1.0d, this.shootingRange.getRandBetween(skeleton.getRandom()), strafe)
+			EARangedBowAttackGoal<AbstractSkeleton> EARangedBowAttackGoal = new EARangedBowAttackGoal<>(skeleton, 1.0d, this.shootingRange.getIntRandBetween(skeleton.getRandom()), strafe)
 					.setAttackCooldown(attackCooldown)
 					.setBowChargeTicks(bowChargeTicks)
 					.setInaccuracy((float) inaccuracy);
